@@ -14,12 +14,11 @@
  See the License for the specific language governing permissions and
  limitations under the License.
 -->
-# Building Log4j 2
+# Building Log4j 2.x
 
-To build Log4j 2, you need a JDK implementation version 1.7 or greater, JDK
-version 9, and Apache Maven 3.x.
+To build Log4j 2.x, you need Java 8 and Java 11 compilers, and Apache Maven 3.x.
 
-Log4j 2.x uses the Java 9 compiler in addition to
+Log4j 2.x uses the Java 11 compiler in addition to
 the Java version installed in the path. This is accomplished by using Maven's toolchains support.
 Log4j 2 provides sample toolchains XML files in the root folder. This may be used by
 modifying it and installing the file as toolchains.xml in the .m2 folder or by using the
@@ -35,10 +34,6 @@ To perform the license release audit, a.k.a. "RAT check", run.
 
     mvn apache-rat:check
 
-To build the site with Java 7, make sure you give Maven enough memory using
-`MAVEN_OPTS` with options appropriate for your JVM. Alternatively, you can
-build with Java 8 and not deal with `MAVEN_OPTS`.
-
 To install the jars in your local Maven repository, from a command line, run:
 
     mvn clean install
@@ -50,10 +45,6 @@ Once install is run, you can run the Clirr check on the API and 1.2 API modules:
     mvn clirr:check -pl log4j-1.2-api
 
 Next, to build the site:
-
-If Java 8 runs out of memory building the site, you will need:
-
-    set MAVEN_OPTS=-Xmx2000m -XX:MaxPermSize=384m
 
     mvn site
 
@@ -68,10 +59,3 @@ On UNIX, use a local staging directory, for example:
 To test, run:
 
     mvn clean install
-
-## Testing in Docker
-
-In order to run a clean test using the minimum version of the JDK along with a
-proper Linux environment, run:
-
-    docker build .
